Version 1.2 Release Fixed draft post visible issue Fixed post count validation issue
git-svn-id: https://plugins.svn.wordpress.org/wp-masonry-layout/trunk@961931 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/wmlc_client.css
+++ b/css/wmlc_client.css
@@ -4,6 +4,7 @@
 .wmle_container .wmle_item_holder.col4{width:25%}
 .wmle_container .wmle_item_holder.col3{width:33.333333333%}
 .wmle_container .wmle_item_holder.col2{width:50%}
+.wmle_container a{padding:0px; margin:0px;}
 
 .wmle_container .wmle_item_holder .wpme_image img{max-width:100%;}
 .wmle_loadmore .loading_icon{ box-shadow:none; border-radius:none;}
